--- a/teaching/macroeconomics_l3/index.html
+++ b/teaching/macroeconomics_l3/index.html
@@ -162,7 +162,7 @@ div.csl-indent {
       <button type="button" class="quarto-btn-toggle btn" data-bs-toggle="collapse" role="button" data-bs-target=".quarto-sidebar-collapse-item" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
         <i class="bi bi-layout-text-sidebar-reverse"></i>
       </button>
-        <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./index.html"><span class="chapter-number">1</span>&nbsp; <span class="chapter-title">Introduction</span></a></li></ol></nav>
+        <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./index.html"><span class="chapter-number">1</span>&nbsp; <span class="chapter-title">Syllabus</span></a></li></ol></nav>
         <a class="flex-grow-1" role="navigation" data-bs-toggle="collapse" data-bs-target=".quarto-sidebar-collapse-item" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">      
         </a>
     </div>
@@ -177,7 +177,7 @@ div.csl-indent {
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./index.html" class="sidebar-item-text sidebar-link active">
- <span class="menu-text"><span class="chapter-number">1</span>&nbsp; <span class="chapter-title">Introduction</span></span></a>
+ <span class="menu-text"><span class="chapter-number">1</span>&nbsp; <span class="chapter-title">Syllabus</span></span></a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -214,7 +214,7 @@ div.csl-indent {
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
-  <li><a href="#introduction" id="toc-introduction" class="nav-link active" data-scroll-target="#introduction"><span class="header-section-number">1</span> Introduction</a>
+  <li><a href="#syllabus" id="toc-syllabus" class="nav-link active" data-scroll-target="#syllabus"><span class="header-section-number">1</span> Syllabus</a>
   <ul class="collapse">
   <li><a href="#objectifs-du-cours" id="toc-objectifs-du-cours" class="nav-link" data-scroll-target="#objectifs-du-cours"><span class="header-section-number">1.1</span> Objectifs du cours</a></li>
   <li><a href="#prérequis" id="toc-prérequis" class="nav-link" data-scroll-target="#prérequis"><span class="header-section-number">1.2</span> Prérequis</a></li>
@@ -265,8 +265,8 @@ div.csl-indent {
 </header>
 
 
-<section id="introduction" class="level1" data-number="1">
-<h1 data-number="1"><span class="header-section-number">1</span> Introduction</h1>
+<section id="syllabus" class="level1" data-number="1">
+<h1 data-number="1"><span class="header-section-number">1</span> Syllabus</h1>
 <p>Ce cours est consacré à l’étude de la croissance économique à long terme, un domaine fondamental de la macroéconomie moderne qui se distingue nettement de l’analyse des fluctuations économiques à court terme. Contrairement aux modèles comme IS-LM qui se concentrent sur les variations conjoncturelles, nous explorons ici les mécanismes profonds qui déterminent l’évolution de la richesse des nations sur plusieurs décennies.</p>
 <p>La compréhension de la croissance économique est cruciale pour saisir les écarts de développement entre pays. Les effets de la croissance s’accumulent de manière exponentielle : une différence de seulement 1% du taux de croissance annuel peut, sur un siècle, transformer un pays développé en économie de niveau intermédiaire. Le cours combine rigoureusement théorie économique, modélisation mathématique et analyse empirique pour comprendre ces phénomènes.</p>
 <p>Nous étudierons les modèles fondamentaux de la croissance néoclassique: Solow et Ramsey-Cass-Koopmans. La deuxième partie du cours, avec <em>Damien Cubizol</em>, porte sur la croissance endogène et les nouvelles théories du développement.</p>
