--- a/teaching/macroeconomics_l3/references.html
+++ b/teaching/macroeconomics_l3/references.html
@@ -174,7 +174,7 @@ div.csl-indent {
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./index.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">1</span>&nbsp; <span class="chapter-title">Introduction</span></span></a>
+ <span class="menu-text"><span class="chapter-number">1</span>&nbsp; <span class="chapter-title">Syllabus</span></span></a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -245,8 +245,8 @@ Campante, Filipe, Federico Sturzenegger, and Andrés Velasco. 2021.
 <em>Advanced Macroeconomics: An Easy Guide</em>. LSE Press. <a href="https://doi.org/10.31389/lsepress.ame">https://doi.org/10.31389/lsepress.ame</a>.
 </div>
 <div id="ref-Romer_2018" class="csl-entry" role="listitem">
-ROMER. 2018. <em>Advanced Macroeconomics</em>. 5th ed. Columbus, OH:
-McGraw-Hill Education.
+Romer, David. 2018. <em>Advanced Macroeconomics</em>. 5th ed. Columbus,
+OH: McGraw-Hill Education.
 </div>
 <div id="ref-Weil_2016" class="csl-entry" role="listitem">
 Weil, David. 2016. <em>Economic Growth</em>. 3rd ed. London, England:
