--- a/teaching/replication_in_economics/index.html
+++ b/teaching/replication_in_economics/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Èric Roca Fernández">
-<meta name="dcterms.date" content="2025-08-29">
+<meta name="dcterms.date" content="2025-09-08">
 
 <title>Replication in Economics: A Practical Guide</title>
 <style>
@@ -176,7 +176,7 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
-  <li><a href="#introduction" id="toc-introduction" class="nav-link active" data-scroll-target="#introduction"><span class="header-section-number">1</span> Introduction</a>
+  <li><a href="#syllabus" id="toc-syllabus" class="nav-link active" data-scroll-target="#syllabus"><span class="header-section-number">1</span> Syllabus</a>
   <ul class="collapse">
   <li><a href="#course-objectives" id="toc-course-objectives" class="nav-link" data-scroll-target="#course-objectives"><span class="header-section-number">1.1</span> Course Objectives</a></li>
   <li><a href="#course-content" id="toc-course-content" class="nav-link" data-scroll-target="#course-content"><span class="header-section-number">1.2</span> Course Content</a></li>
@@ -213,7 +213,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">August 29, 2025</p>
+      <p class="date">September 8, 2025</p>
     </div>
   </div>
   
@@ -225,8 +225,8 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="introduction" class="level1" data-number="1">
-<h1 data-number="1"><span class="header-section-number">1</span> Introduction</h1>
+<section id="syllabus" class="level1" data-number="1">
+<h1 data-number="1"><span class="header-section-number">1</span> Syllabus</h1>
 <p>This course provides a practical introduction to the essential elements of research replication in economics. It covers project organization, data management, coding practices in Stata and Python, and collaborative version control using Git. The primary goal is to equip students with the skills to conduct replicable research and to navigate the replication process effectively.</p>
 <section id="course-objectives" class="level2" data-number="1.1">
 <h2 data-number="1.1" class="anchored" data-anchor-id="course-objectives"><span class="header-section-number">1.1</span> Course Objectives</h2>
