Adds references to replication

--- a/teaching/replication_in_economics/introduction.html
+++ b/teaching/replication_in_economics/introduction.html
@@ -198,6 +198,12 @@ div.csl-indent {
  <span class="menu-text"><span class="chapter-number">7</span>&nbsp; <span class="chapter-title">Version Control with Git for Reproducible Research</span></span></a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./references.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text"><span class="chapter-number">8</span>&nbsp; <span class="chapter-title">References</span></span></a>
+  </div>
+</li>
     </ul>
     </div>
 </nav>
@@ -246,7 +252,7 @@ div.csl-indent {
 <p>The main purpose of replication is to verify that published results can be independently reproduced using the same data and code. This process helps ensure that findings are not the result of errors, selective reporting, or other issues. Replication is a fundamental part of the scientific method, fostering transparency, accountability, and trust in research.</p>
 <section id="types-of-replication" class="level3" data-number="2.1.1">
 <h3 data-number="2.1.1" class="anchored" data-anchor-id="types-of-replication"><span class="header-section-number">2.1.1</span> Types of Replication</h3>
-<p>There are several types of replication in economics, each serving a different purpose <span class="citation" data-cites="Clemens_2017">(<a href="#ref-Clemens_2017" role="doc-biblioref">Clemens 2017</a>)</span>:</p>
+<p>There are several types of replication in economics, each serving a different purpose <span class="citation" data-cites="Clemens_2017">(<a href="references.html#ref-Clemens_2017" role="doc-biblioref">Clemens 2017</a>)</span>:</p>
 <ul>
 <li><strong>Pure (or direct) replication:</strong> Reproducing the results of a study using the same data and methods as the original paper.</li>
 <li><strong>Robustness replication:</strong> Testing whether the results hold under alternative methods, model specifications, or subsets of the data.</li>
@@ -276,7 +282,7 @@ div.csl-indent {
 </ul>
 
 
-<div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
+<div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list" style="display: none">
 <div id="ref-Clemens_2017" class="csl-entry" role="listitem">
 Clemens, Michael A. 2017. <span>“The Meaning of Failed Replications: A Review and Proposal.”</span> <em>Journal of Economic Surveys</em> 31 (1): 326–42.
 </div>
