Typo in exercise

--- a/teaching/macroeconomics_l2/is_lm_model.html
+++ b/teaching/macroeconomics_l2/is_lm_model.html
@@ -1079,7 +1079,7 @@ Y &amp;= c_0 + c_1(Y-2) + \frac{1}{r} + 5 \\
 </ol></li>
 <li><p>Dans le modèle IS-LM nous avons supposé que la demande d’encaisses réels dépendait du revenu. Une hypothèse plus réaliste serait de supposer que la demande de monnaie répond non pas au revenu mais plutôt au revenu disponible (<span class="math inline">\(Y-T\)</span>).</p>
 <ol type="1">
-<li><p>Si on suppose <span class="math inline">\(Y=\overbrace{5+0.6(Y-T)}^{C}+\frac{4}{r}+\overbrace{4}^{G}\)</span> et <span class="math inline">\(\overbrace{50}^{\frac{M^s}{p}}=2(Y-T)-\frac{0.2}{r}\)</span> calculez le niveau de revenu et le taux d’intérêt d’équilibre quand <span class="math inline">\(T=1.05\)</span></p></li>
+<li><p>Si on suppose <span class="math inline">\(Y=\overbrace{5+0.6(Y-T)}^{C}+\frac{4}{r}+\overbrace{4}^{G}\)</span> et <span class="math inline">\(\overbrace{50}^{\frac{M^s}{p}}=2(Y-T)+\frac{0.2}{r}\)</span> calculez le niveau de revenu et le taux d’intérêt d’équilibre quand <span class="math inline">\(T=1.05\)</span></p></li>
 <li><p>Dans un même schéma, tracez la courbe LM et montrez comment elle change quand <span class="math inline">\(T\)</span> change.</p></li>
 </ol></li>
 </ol>
